fix read retorno
