# docs/swagger.json
@@ -207,8 +207,8 @@
                 "codigo_barras": {
                     "type": "string"
                 },
-                "curso_id": {
-                    "type": "integer"
+                "codigo_registro": {
+                    "type": "string"
                 },
                 "data_credito": {
                     "type": "string"
@@ -222,7 +222,7 @@
                 "forma_pagamento": {
                     "type": "string"
                 },
-                "matricula_inscricao_por_extenso": {
+                "identificacao": {
                     "type": "string"
                 },
                 "nsr": {
